-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0
-
None
-
-
fdedbdd3d (13.0)
After playing a bit with Axivion issue table:
1 __gnu_cxx::__atomic_add atomicity.h 71 0x7ffff773c72a 2 __gnu_cxx::__atomic_add_dispatch atomicity.h 111 0x7ffff773c72a 3 std::_Sp_counted_base<(__gnu_cxx::_Lock_policy)2>::_M_add_ref_copy shared_ptr_base.h 148 0x7ffff773c72a 4 std::__shared_count<(__gnu_cxx::_Lock_policy)2>::__shared_count shared_ptr_base.h 712 0x7ffff77368f3 5 std::__shared_ptr<Tasking::StorageData, (__gnu_cxx::_Lock_policy)2>::__shared_ptr shared_ptr_base.h 1152 0x7ffff7732f29 6 std::shared_ptr<Tasking::StorageData>::shared_ptr shared_ptr.h 150 0x7ffff7732f53 7 Tasking::StorageBase::StorageBase tasktree.h 148 0x7ffff7732f7d 8 Tasking::RuntimeContainer::~RuntimeContainer tasktree.cpp 1669 0x7ffff7733b37 9 std::_Optional_payload_base<Tasking::RuntimeContainer>::_M_destroy optional 260 0x7ffff774387a 10 std::_Optional_payload_base<Tasking::RuntimeContainer>::_M_reset optional 280 0x7ffff773d304 11 std::_Optional_base_impl<Tasking::RuntimeContainer, std::_Optional_base<Tasking::RuntimeContainer, false, false>>::_M_reset optional 430 0x7ffff773ecc4 12 std::optional<Tasking::RuntimeContainer>::reset optional 1005 0x7ffff7738a8a 13 Tasking::TaskTreePrivate::invokeDoneHandler tasktree.cpp 2066 0x7ffff772a0f3 14 Tasking::TaskTreePrivate::continueStart tasktree.cpp 1941 0x7ffff772985c 15 Tasking::TaskTreePrivate::childDone tasktree.cpp 2025 0x7ffff7729df4 16 Tasking::TaskTreePrivate::continueStart tasktree.cpp 1945 0x7ffff77298ab 17 Tasking::TaskTreePrivate::childDone tasktree.cpp 2025 0x7ffff7729df4 18 operator() tasktree.cpp 2114 0x7ffff772a2d7 19 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<Tasking::DoneResult>, void, Tasking::TaskTreePrivate::start(Tasking::RuntimeTask *)::<lambda(Tasking::DoneResult)>>::call(struct {...} &, void * *) qobjectdefs_impl.h 137 0x7ffff772fc6c 20 QtPrivate::Functor<Tasking::TaskTreePrivate::start(Tasking::RuntimeTask *)::<lambda(Tasking::DoneResult)>, 1>::call<QtPrivate::List<Tasking::DoneResult>, void>(struct {...} &, void *, void * *) qobjectdefs_impl.h 339 0x7ffff772f371 21 QtPrivate::QCallableObject<Tasking::TaskTreePrivate::start(Tasking::RuntimeTask *)::<lambda(Tasking::DoneResult)>, QtPrivate::List<Tasking::DoneResult>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 522 0x7ffff772e77a 22 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 433 0x7ffff49c43e9 23 doActivate<false> qobject.cpp 4039 0x7ffff4a5cb1a 24 QMetaObject::activate qobject.cpp 4099 0x7ffff4a526f3 25 Tasking::TaskInterface::done moc_tasktree.cpp 170 0x7ffff7716a6f 26 Utils::AsyncTaskAdapter<tl::expected<Axivion::Internal::Dto::TableInfoDto, QString>>::AsyncTaskAdapter()::{lambda()#1}::operator()() const async.h 207 0x7fff8c6b04dd 27 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Utils::AsyncTaskAdapter<tl::expected<Axivion::Internal::Dto::TableInfoDto, QString>>::AsyncTaskAdapter()::{lambda()#1}>::call(Utils::AsyncTaskAdapter<tl::expected<Axivion::Internal::Dto::TableInfoDto, QString>>::AsyncTaskAdapter()::{lambda()#1}&, void * *) qobjectdefs_impl.h 137 0x7fff8c6cd153 28 QtPrivate::Functor<Utils::AsyncTaskAdapter<tl::expected<Axivion::Internal::Dto::TableInfoDto, QString>>::AsyncTaskAdapter()::{lambda()#1}, 0>::call<QtPrivate::List<>, void>(Utils::AsyncTaskAdapter<tl::expected<Axivion::Internal::Dto::TableInfoDto, QString>>::AsyncTaskAdapter()::{lambda()#1}&, void *, void * *) qobjectdefs_impl.h 339 0x7fff8c6cb00d 29 QtPrivate::QCallableObject<Utils::AsyncTaskAdapter<tl::expected<Axivion::Internal::Dto::TableInfoDto, QString>>::AsyncTaskAdapter()::{lambda()#1}, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 522 0x7fff8c6c8a1c 30 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 433 0x7ffff49c43e9 31 doActivate<false> qobject.cpp 4039 0x7ffff4a5cb1a 32 QMetaObject::activate qobject.cpp 4099 0x7ffff4a526f3 33 Utils::AsyncBase::done moc_async.cpp 203 0x7ffff7768f1f 34 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Utils::AsyncBase:: *)()>::call(void (Utils::AsyncBase:: *)(), Utils::AsyncBase *, void * *) qobjectdefs_impl.h 145 0x7fff8c6cd39e 35 QtPrivate::FunctionPointer<void (Utils::AsyncBase:: *)()>::call<QtPrivate::List<>, void>(void (Utils::AsyncBase:: *)(), Utils::AsyncBase *, void * *) qobjectdefs_impl.h 182 0x7fff8c6cb26c 36 QtPrivate::QCallableObject<void (Utils::AsyncBase:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 520 0x7fff8c6c8e83 37 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 433 0x7ffff49c43e9 38 doActivate<false> qobject.cpp 4039 0x7ffff4a5cb1a 39 QMetaObject::activate qobject.cpp 4099 0x7ffff4a526f3 40 QFutureWatcherBase::finished moc_qfuturewatcher.cpp 455 0x7ffff4ca3e8d 41 QFutureWatcherBasePrivate::sendCallOutEvent qfuturewatcher.cpp 493 0x7ffff4ca333a 42 QFutureWatcherBase::event qfuturewatcher.cpp 392 0x7ffff4ca2cbf 43 QApplicationPrivate::notify_helper qapplication.cpp 3296 0x7ffff69abfda 44 QApplication::notify qapplication.cpp 3247 0x7ffff69abdcc 45 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1121 0x7ffff49bda79 46 QCoreApplication::sendEvent qcoreapplication.cpp 1539 0x7ffff49be61b 47 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1901 0x7ffff49bf572 48 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1760 0x7ffff49bee40 49 postEventSourceDispatch qeventdispatcher_glib.cpp 243 0x7ffff4e227c4 50 g_main_context_dispatch 0x7ffff431bd3b 51 ?? 0x7ffff4371258 52 g_main_context_iteration 0x7ffff43193e3 53 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 393 0x7ffff4e23086 54 QXcbGlibEventDispatcher::processEvents qxcbeventdispatcher.cpp 96 0x7ffff0b0b5be 55 QEventLoop::processEvents qeventloop.cpp 100 0x7ffff49d4433 56 QEventLoop::exec qeventloop.cpp 182 0x7ffff49d47a2 57 QCoreApplication::exec qcoreapplication.cpp 1442 0x7ffff49be3e4 58 QGuiApplication::exec qguiapplication.cpp 1925 0x7ffff59ea76e 59 QApplication::exec qapplication.cpp 2574 0x7ffff69a8fa3 60 main main.cpp 888 0x555555565892
| For Gerrit Dashboard: QTCREATORBUG-30429 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 542501,4 | Axivion: Fix a possible crash when rerunning task tree from its handler | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |