Axivion: Fix a possible crash when rerunning task tree from its handler

Don't call setTableDto() directly from tableInfoRecipe's handler.
Store the new table dto in the handler and update the Gui afterwards,
on task tree done.

Fixes: QTCREATORBUG-30429
Change-Id: Id267c8375bf7c9a107450ac34ecba37d696f45e1
Reviewed-by: hjk <hjk@qt.io>